color adjust to fix contrast error

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ img{
 }
 
 main {
-    background-color: rgb(182, 161, 43);
+    background-color: rgb(255, 217, 0);
     margin: -5;
     padding: -5;
 }
